# iRBC_GEM

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  README.md  iAB_RBC_283.yml  index.html  memote.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: memote.yml
models/cobra/: iAB_RBC_283.xml  iAB_RBC_283_bigg_10_31_2019.json
models/iAB_RBC_283/: iAB_RBC_283.yml  iAB_RBC_283_bigg_10_31_2019.yml  iAB_RBC_283_cleaned.json  iAB_RBC_283_cleaned.mat  iAB_RBC_283_cleaned.xml  iAB_RBC_283_cleaned.yml
notebooks/: 1A. Prune Human Reconstructions.ipynb  1B. Update iAB_RBC_283.ipynb
scripts/: ghactions_deploy.sh
src/irbc_gem/: __init__.py
