title = "RBC-GEM TOML configuration file"


################################################################################
# Build tools configuration                                                    #
################################################################################

[build-system]
requires = [
    "setuptools >= 46.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

################################################################################
# Lint tools configuration                                                     #
################################################################################

[tool.black]
line-length = 88
python-version = [
    "py38",
    "py39",
    "py39",
    "py310",
    "py311",
]



[tool.isort]
profile = "black"
src_paths = [
    "src/irbc_gem"
]
indent = 4
lines_after_imports = 2
