[metadata]
name = irbc_gem
version = attr: irbc_gem.__version__
author = Zachary B. Haiman
author_email = zhaiman@eng.ucsd.edu
maintainer = Zachary B. Haiman
maintainer_email = zhaiman@eng.ucsd.edu
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics

description = Source code for the RBC-GEM model.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python


[options]
zip_safe = True
install_requires =
    cobra
    memote
    pre-commit
    depinfo
    numpy
    pandas
    gurobipy
    scipy
    requests
    openpyxl

python_requires = ~=3.8
include_package_data = True
packages = find:
package_dir =
	= src

[options.packages.find]
where = src
include =
    irbc_gem

[options.extras_require]
development =
    pre-commit
    notebook
all =
    %(development)s


[flake8]
ignore = E203, E266, E501, W503, F401
max-line-length = 88
max-complexity = 18

[memote]
model = models/memote/iAB_RBC_283.xml
location = results
github_username = z-haiman
github_repository = irbc_gem
experimental = data/memote/experiments.yml
deployment = gh-pages

[pre_commit]
yaml = default
